apps/automation/homeassistant/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: automation  
spec:
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              name: http-ha
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 8123
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/lib/homeassistant
              name: homeassistant-pv
      volumes:
        - name: homeassistant-pv
          persistentVolumeClaim:
            claimName: homeassistant-pvc
