apps/automation/homeassistant/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-homeassistant
  namespace: automation
spec:
  ports:
    - port: 8123
      protocol: TCP
      targetPort: http-homeassistant
  selector:
    app: homeassistant
