apps/automation/homeassistant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: automation  
  annotations:
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: public    
spec:
  rules:
  - host: homeassistant.ting
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-homeassistant
            port:
              number: 8123
